--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -19,6 +19,7 @@ body {
 
 #wrapper {
     padding-left: 0;
+    background-color:#b30000; 
 }
 
 #page-wrapper {
@@ -226,3 +227,4 @@ ul.alert-dropdown {
 .panel-yellow > a:hover {
     color: #df8a13;
 }
+
