--- a/css/mash.css
+++ b/css/mash.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #b30000;
+	background-color: #fff;
 }
 
 .title{
@@ -18,7 +18,7 @@ table, th, td {
     color: red;
 }
 th, td {
-	color: #fff;
+	color: #000;
     padding: 5px;
     text-align: left;
 }
@@ -30,5 +30,5 @@ table#t01 {
 #grand{
 	float: left;
 	width: 50%;
-	color: #fff;
+	color: #000;
 }
