--- a/css/grand.css
+++ b/css/grand.css
@@ -1,6 +1,6 @@
 
 body{
-	background-color: #b30000;
+	background-color: #fff;
 }
 
 .title{
@@ -19,7 +19,7 @@ table, th, td {
     color: red;
 }
 th, td {
-	color: #fff;
+	color: #000;
     padding: 5px;
     text-align: left;
 }
@@ -31,5 +31,6 @@ table#t01 {
 #grand{
 	float: left;
 	width: 50%;
-	color: #fff;
+	color: #000;
 }
+
